# sistema-xyz-testes

./: CMakeLists.txt  control_pwm.c  controle_motor.c  controle_potenciometro.c  first_stepper_test.c  gui.html  gui_script.js  gui_style.css  homing.c  index_v2.html  index_v3.html  index_v4.html  index_v5.html  index_v6.html  index_v7.html  index_v8.html  index_v9.html  joystick_control.c  joystick_control_v2.c  joystick_control_v3.c  joystick_control_v4.c  joystick_control_v5.c  joystick_control_v6.c  joystick_control_v7.c  joystick_control_v8.c  joystick_control_v9.c  keyboard.c  linear_accel_blocking.c  linear_accel_timer.c  linear_accel_timer_parallel.c  main.c  multiple_motors_control.c  rampa.c  run_indef.c  run_motor_with_timer.c  set_rpm.c  switches_test.c  sync_mov_v1.c  sync_mov_v2.c  sync_mov_v3.c  (+5 more)
libs/: CMakeLists.txt  globals.h
libs/command_handler/: command_handler.c  command_handler.h
libs/http_client/: http_client.c  http_client.h
libs/joystick_control/: joystick_control.c  joystick_control.h
libs/position_handler/: homing.c  homing.h  position_handler.c  position_handler.h
libs/stepper_control/: stepper_control.c  stepper_control.h
libs/tasksRTOS/: httpClientTask.c  tasksRTOS.c  tasksRTOS.h
